--- a/SPPipAPi/SPPipAPi.csproj
+++ b/SPPipAPi/SPPipAPi.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CreateUser.cs" />
     <Compile Include="Models\pipflow.cs" />
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
