--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/PipFlowSite" />
+    <add key="AD_USER_URL" value="http://sharepoint2/sites/teamsiteex/PipFlowSite" />
     
   </appSettings>
   <system.web>
