--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -4,18 +4,22 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+ 
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/PipFlowSite" />
-    <add key="AD_USER_URL" value="http://sharepoint2/sites/teamsiteex/PipFlowSite" />
-    
+    <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/pipflowsitedev" />
+    <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />
+    <add key="DomainName" value="i:0#.w|saathispdt.com\" />
+
   </appSettings>
   <system.web>
+ 
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+   
+    <httpRuntime enableVersionHeader="false" executionTimeout="300" maxRequestLength="2147483647" targetFramework="4.7.2" />
   </system.web>
   <system.webServer>
     <handlers>
