--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -11,6 +11,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/pipflowsitetesting" />
+    <add key="SITE_API_URL" value="http://localhost:8080" />
     <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />
     <add key="DomainName" value="i:0#.w|saathispdt.com\" />
 
