--- a/SPPipAPi/SPPipAPi.csproj
+++ b/SPPipAPi/SPPipAPi.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PipflowController.cs" />
+    <Compile Include="Controllers\SupliPipflowController.cs" />
     <Compile Include="Controllers\TEstController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
