--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -10,8 +10,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/testlocal" />
-    <add key="SITE_API_URL" value="http://52.172.200.35:2020/sppipapitestlocal" />
+    <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/pipflowsitetesting" />
+    <add key="SITE_API_URL" value="http://52.172.200.35:2020/sppipapidev" />
     <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />
     <add key="DomainName" value="i:0#.w|saathispdt.com\" />
     <add key="TASK_WAIT_TIME" value="20000"/>
