--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -12,8 +12,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/pipflowsitetesting" />
     <add key="SITE_API_URL" value="http://52.172.200.35:2020/sppipapidev" />
-    <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />
-    <add key="DomainName" value="i:0#.w|saathispdt.com\" />
+  <!--  <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />-->
+    <add key="AD_USER_URL" value="http://localhost:60385/api/ADUVerify" />
+         <add key="DomainName" value="i:0#.w|saathispdt.com\" />
     <add key="TASK_WAIT_TIME" value="20000"/>
   </appSettings>
   <system.web>
