--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -10,9 +10,21 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+ <!-- live   <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/pipflowsitetesting" /> 
     <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/pipflowsitetesting" />
-    <add key="SITE_API_URL" value="http://52.172.200.35:2020/sppipapidev" />
-  <!--  <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />-->
+       <add key="SITE_API_URL" value="http://52.172.200.35:8111/sppipapidev" />
+       
+        if (ConfigurationManager.AppSettings["SITE_URL_USER"] != null)
+                strUSER = ConfigurationManager.AppSettings["SITE_URL_USER"].ToString();
+            if (ConfigurationManager.AppSettings["SITE_URL_PWD"] != null)
+                strPWD = ConfigurationManager.AppSettings["SITE_URL_PWD"].ToString();
+    -->
+     <add key="IS_SINGLE_TASK" value="Y" />
+    <add key="SITE_URL" value="http://sharepoint2/sites/teamsiteex/testlocal" />
+    <add key="SITE_API_URL" value="http://52.172.200.35:8111/sppipapitestlocal" />
+    <!--   <add key="SITE_URL_USER" value="pruser1" />
+    <add key="SITE_URL_PWD" value="%Dalab^!065#" />
+   <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />-->
     <add key="AD_USER_URL" value="http://localhost:60385/api/ADUVerify" />
          <add key="DomainName" value="i:0#.w|saathispdt.com\" />
     <add key="TASK_WAIT_TIME" value="20000"/>
