Bulk push code rewrite

--- a/SPPipAPi/Web.config
+++ b/SPPipAPi/Web.config
@@ -27,7 +27,7 @@
    <add key="AD_USER_URL" value="http://sharepoint2:8081/api/ADUVerify" />-->
     <add key="AD_USER_URL" value="http://localhost:60385/api/ADUVerify" />
          <add key="DomainName" value="i:0#.w|saathispdt.com\" />
-    <add key="TASK_WAIT_TIME" value="20000"/>
+    <add key="TASK_WAIT_TIME" value="20000" />
   </appSettings>
   <system.web>
  
@@ -72,6 +72,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SharePoint.Client.Runtime" publicKeyToken="71e9bce111e9429c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-14.0.0.0" newVersion="14.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
