--- a/SPPipAPi/packages.config
+++ b/SPPipAPi/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Sharepoint.2013.Client.16" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.SharePoint.Client" version="14.0.4762.1000" targetFramework="net472" />
   <package id="Microsoft.SharePoint.Client.Runtime.2010" version="14.0.4762.1000" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
