updated latest changes

--- a/ConsoleApps/BulkpushMultiStatePushConsoleApp/BulkpushMultiStatePushConsoleApp/App.config
+++ b/ConsoleApps/BulkpushMultiStatePushConsoleApp/BulkpushMultiStatePushConsoleApp/App.config
@@ -2,11 +2,22 @@
 <configuration>
   <appSettings>
 
+
+
     <add key="stateids" value=",1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39," />
-    <!--NO space in path -->
+   <!-- <add key="exepath" value="D:\Console8080_testing\CopyListItemsSsom\Release\CopyListItemsSsom.exe" />-->
+    
+    <add key="exepath" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\CopyListItemsSsom.exe" />
+    <add key="statefind" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\" />
+    <add key="processname" value="copylistitemsssom" />
+    <add key="processname_root_folder" value="console8080_testing" />
+    <add key="SITE_URL_USER" value="pruser1" />
+    <add key="SITE_URL_PWD" value="%Dalab^!065#" />
+    
+    <!--
     <add key="exepath" value="D:\ConsoleTasks\SPBulkPush_FMRTASKS_MultiArges\BulkPushConsoleApp.exe" />
     <add key="processname" value="copylistitemssom" />
-    <add key="processname_root_folder" value="CopyListItemsSsom" />
+    <add key="processname_root_folder" value="CopyListItemsSsom" />-->
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
