--- a/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
+++ b/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-    
-    <add key="SITE_URL" value="http://sharepoint1:8014/sites/testlocal" />
-    <add key="DEST_SITE_URL" value="http://sharepoint1:8014/sites/testlocal" />
+      <add key="statefind" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\" />
+    <add key="SITE_URL" value="http://sharepoint1:8080/sites/testlocal" />
+    <add key="DEST_SITE_URL" value="http://sharepoint1:8080/sites/testlocal" />
     <add key="sourceListname" value="bulkpushapis" />
      <add key="destinationListname" value="workflow_history" />
     <add key="satewisemappinglist" value="1," />
