--- a/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
+++ b/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
@@ -9,7 +9,8 @@
     <add key="satewisemappinglist" value="1," />
       <add key="DomainName" value="i:0#.w|saathispdt.com\" />
       <add key="queuelength" value="50" />
-      <add key ="ISSUPLIMENTARY" value="Y"/>
+      <add key ="ISSUPLIMENTARY" value="N"/>
+     <add key="UPLOAD_FILE_PATH" value="\\192.168.2.14\publish\consoles\" />
   </appSettings>
       <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
