--- a/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/CopyListItemsSsom.csproj
+++ b/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/CopyListItemsSsom.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkpushAPIS.cs" />
     <Compile Include="ClsGeneral.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
