updated for apis bulkpush and supplimentary

--- a/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
+++ b/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
@@ -9,7 +9,7 @@
     <add key="satewisemappinglist" value="1," />
       <add key="DomainName" value="i:0#.w|saathispdt.com\" />
       <add key="queuelength" value="50" />
-      <add key ="ISSUPLIMENTARY" value="N"/>
+      <add key ="ISSUPLIMENTARY" value="y"/>
      <add key="UPLOAD_FILE_PATH" value="\\192.168.2.14\publish\consoles\" />
   </appSettings>
       <startup> 
