All latest Apps commited from .11

--- a/ConsoleApps/BulkpushApiDelete/BulkpushApiDelete/App.config
+++ b/ConsoleApps/BulkpushApiDelete/BulkpushApiDelete/App.config
@@ -6,10 +6,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
    <add key="IS_SINGLE_TASK" value="Y" />
-    <add key="SITE_URL" value="http://sharepoint1:8080/sites/testlocal/pipflowsitetesting" />
+    <add key="SITE_URL" value="http://sharepoint2:8080/sites/testlocal/pipflowsitetesting" />
     <add key="SITE_API_URL" value="http://52.172.200.35:8111/sppipapitestlocal" />
-     <add key="SITE_URL_USER" value="pruser1" />
-    <add key="SITE_URL_PWD" value="%Dalab^!065#" />
+     <add key="SITE_URL_USER" value="spuser2" />
+    <add key="SITE_URL_PWD" value="User@123#" />
   
     <add key="AD_USER_URL" value="http://localhost:60385/api/ADUVerify" />
          <add key="DomainName" value="i:0#.w|saathispdt.com\" />
