--- a/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
+++ b/ConsoleApps/CopyListItemsSsom/CopyListItemsSsom/App.config
@@ -1,22 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <appSettings>
-      <add key="exepath" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\CopyListItemsSsom.exe" />
-      <add key="statefind" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\" />
-    <add key="SITE_URL" value="http://sharepoint1:8080/sites/testlocal" />
-      <add key="DEST_SITE_URL" value="http://sharepoint1:8080/sites/testlocal" />
-    <add key="sourceListname" value="bulkpushapis" />
-     <add key="destinationListname" value="workflow_history" />
-    <add key="satewisemappinglist" value="1," />
-      <add key="DomainName" value="i:0#.w|saathispdt.com\" />
-      <add key="queuelength" value="50" />
-      <add key ="ISSUPLIMENTARY" value="n"/>
-     <add key="UPLOAD_FILE_PATH" value="\\192.168.2.14\publish\dconsoles\" />
-      <add key="issplitfileandprocess" value="y" />
-      <add key="isplitCount" value="50" />
-  </appSettings>
+      <add key="exepath" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\CopyListItemsSsom.exe"/>
+      <add key="statefind" value="D:\webapps\sharepointDevelopment\ConsoleApps\CopyListItemsSsom\CopyListItemsSsom\bin\Release\"/>
+      <add key="SITE_URL" value="http://sharepoint2:8080/sites/testlocal/pipflowsitetesting"/>
+      <add key="DEST_SITE_URL" value="http://sharepoint2:8080/sites/testlocal/pipflowsitetesting"/>
+      <add key="sourceListname" value="bulkpushapis"/>
+      <add key="destinationListname" value="workflow_history"/>
+      <add key="satewisemappinglist" value="1,"/>
+      <add key="DomainName" value="i:0#.w|saathispdt.com\"/>
+      <add key="queuelength" value="100"/>
+      <add key="ISSUPLIMENTARY" value="n"/>
+      <add key="UPLOAD_FILE_PATH" value="\\192.168.2.14\publish\newconsoles"/>
+      <add key="issplitfileandprocess" value="y"/>
+      <add key="isplitCount" value="100"/>
+      <add key="UICallbackURL" value="http://52.172.200.35:2020/PIPR/Login/UpdateApplicationvar"/>
+      <add key="multiconsole" value="y"/>
+    </appSettings>
       <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     
 </configuration>
