--- a/FileUploadapi/FileUploadapi/Web.config
+++ b/FileUploadapi/FileUploadapi/Web.config
@@ -22,9 +22,15 @@
   <system.web>
     <identity impersonate="true" userName="SAATHISPDT\pruser1" password="%Dalab^!065#" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="104857600" />
+
   </system.web>
   <system.webServer>
+  <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="104857600" />
+      </requestFiltering>
+    </security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
